hphp/test/zend/good/Zend/tests/magic_by_ref_001.php.expectf

Fatal error: Method test::__set() cannot take arguments by reference in %s/magic_by_ref_001.php on line 4
